change price-dashboard and title of stablecoin dashboard

--- a/dashboards/crypto/stablecoin.html
+++ b/dashboards/crypto/stablecoin.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>PAXG DASHBOARD</title>
+    <title>STABLECOIN DASHBOARD</title>
 	<meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
