fix the nav and added crypto dashboard

--- a/dashboards/crypto/paxg.html
+++ b/dashboards/crypto/paxg.html
@@ -131,24 +131,21 @@
 </div>
 
 
+<!-- Start Nav Structure -->
 <div>
-    <!-- Start Nav Structure -->
-    <button class="cn-button" id="cn-button">Menu</button>
-    <div class="cn-wrapper" id="cn-wrapper">
-        <ul>
-            <li><a href="#"><span>-</span></a></li>
-            <li><a href="#"><span>-</span></a></li>
-            <li><a href="/bitcoin/price-dashboard-alt.html"><span>ALTS</span></a></li>
-
-            <li><a href="/bitcoin/price-dashboard.html"><span>MAIN</span></a></li>
-
-            <li><a href="#"><span></span></a></li>
-            <li><a href="#"><span></span></a></li>
-            <li><a href="#"><span></span></a></li>
-         </ul>
-    </div>
-    <!-- End of Nav Structure -->
-</div>
+  <button class="cn-button" id="cn-button">Menu</button>
+  <div class="cn-wrapper" id="cn-wrapper">
+      <ul>
+          <li><a href="#"><span>-</span></a></li>
+          <li><a href="#"><span>-</span></a></li>
+          <li><a href="/dashboards/crypto/paxg"><span>PAXG</span></a></li>
+          <li><a href="/dashboards/crypto/stablecoin"><span>STABLECOIN</span></a></li>
+          <li><a href="/dashboards/crypto/crypto"><span>CRYPTO</span></a></li>
+          <li><a href="#"><span></span></a></li>
+          <li><a href="#"><span></span></a></li>
+       </ul>
+  </div>
+</div><!-- End of Nav Structure -->
 
 
 </div> <!-- End Container-->
