--- a/dashboards/crypto/crypto.html
+++ b/dashboards/crypto/crypto.html
@@ -27,9 +27,8 @@
                   freeboard.initialize(true, function(){
                     $('#main-header').hide();
                   });
-                  $.getJSON('default.json', function(data){
+                  $.getJSON('crypto.json', function(data){
                     freeboard.loadDashboard(data, function() { freeboard.setEditing(false); });
-
                   });
               });
           });
@@ -55,118 +54,105 @@
 </head>
 <body>
 
-<div class="container">
-
+  <div class="container">
     <a href="/" style="z-index: 1000" title="Back to Main">
       <div style="position: fixed; top: 10px; left: 10px; font-size: 26px;">
         <i class="fa fa-arrow-left"></i>
       </div>
     </a>
 
-  <div id="board-content">
-      <img id="dash-logo" data-bind="attr:{src: header_image}, visible:header_image()">
-      <div class="gridster responsive-column-width">
-          <ul data-bind="grid: true">
-          </ul>
-      </div>
-  </div>
+    <div id="board-content">
+        <img id="dash-logo" data-bind="attr:{src: header_image}, visible:header_image()">
+        <div class="gridster responsive-column-width">
+            <ul data-bind="grid: true">
+            </ul>
+        </div>
+    </div>
 
+    <header id="main-header" data-bind="if:allow_edit">
+        <div id="admin-bar">
+            <div id="admin-menu">
+                <div id="board-tools">
+                    <h1 id="board-logo" class="title bordered">BTC Exchange Prices</h1>
+                    <div id="board-actions">
+                        <ul class="board-toolbar vertical">
+                            <li data-bind="click: loadDashboardFromLocalFile"><i id="full-screen-icon" class="icon-folder-open icon-white"></i><label id="full-screen">Load Freeboard</label></li>
+                            <li data-bind="click: saveDashboard"><i class="icon-download-alt icon-white"></i><label>Save Freeboard</label></li>
+                            <li id="add-pane" data-bind="click: createPane"><i class="icon-plus icon-white"></i><label>Add Pane</label></li>
+                        </ul>
+                    </div>
+                </div>
+                <div id="datasources">
+                    <h2 class="title">DATASOURCES</h2>
 
-  <header id="main-header" data-bind="if:allow_edit">
-      <div id="admin-bar">
-          <div id="admin-menu">
-              <div id="board-tools">
-                  <h1 id="board-logo" class="title bordered">BTC Exchange Prices</h1>
-                  <div id="board-actions">
-                      <ul class="board-toolbar vertical">
-                          <li data-bind="click: loadDashboardFromLocalFile"><i id="full-screen-icon" class="icon-folder-open icon-white"></i><label id="full-screen">Load Freeboard</label></li>
-                          <li data-bind="click: saveDashboard"><i class="icon-download-alt icon-white"></i><label>Save Freeboard</label></li>
-                          <li id="add-pane" data-bind="click: createPane"><i class="icon-plus icon-white"></i><label>Add Pane</label></li>
-                      </ul>
-                  </div>
-              </div>
-              <div id="datasources">
-                  <h2 class="title">DATASOURCES</h2>
+                    <div class="datasource-list-container">
+                        <table class="table table-condensed sub-table" id="datasources-list" data-bind="if: datasources().length">
+                            <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Last Updated</th>
+                                <th>&nbsp;</th>
+                            </tr>
+                            </thead>
+                            <tbody data-bind="foreach: datasources">
+                            <tr>
+                                <td>
+                                    <span class="text-button datasource-name" data-bind="text: name, pluginEditor: {operation: 'edit', type: 'datasource'}"></span>
+                                </td>
+                                <td data-bind="text: last_updated"></td>
+                                <td>
+                                    <ul class="board-toolbar">
+                                        <li data-bind="click: updateNow"><i class="icon-refresh icon-white"></i></li>
+                                        <li data-bind="pluginEditor: {operation: 'delete', type: 'datasource'}">
+                                            <i class="icon-trash icon-white"></i></li>
+                                    </ul>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                    <span class="text-button table-operation" data-bind="pluginEditor: {operation: 'add', type: 'datasource'}">ADD</span>
+                </div>
+            </div>
+        </div>
+        <div id="column-tools" class="responsive-column-width">
+            <ul class="board-toolbar left-columns">
+                <li class="column-tool add" data-bind="click: addGridColumnLeft"><span class="column-icon right"></span><i class="icon-arrow-left icon-white"></i></li>
+                <li class="column-tool sub" data-bind="click: subGridColumnLeft"><span class="column-icon left"></span><i class="icon-arrow-right icon-white"></i></li>
+            </ul>
+            <ul class="board-toolbar right-columns">
+                <li class="column-tool sub" data-bind="click: subGridColumnRight"><span class="column-icon right"></span><i class="icon-arrow-left icon-white"></i></li>
+                <li class="column-tool add" data-bind="click: addGridColumnRight"><span class="column-icon left"></span><i class="icon-arrow-right icon-white"></i></li>
+            </ul>
+        </div>
+        <div id="toggle-header" data-bind="click: toggleEditing">
+          <i id="toggle-header-icon" class="icon-wrench icon-white"></i>
+        </div>
+    </header>
 
-                  <div class="datasource-list-container">
-                      <table class="table table-condensed sub-table" id="datasources-list" data-bind="if: datasources().length">
-                          <thead>
-                          <tr>
-                              <th>Name</th>
-                              <th>Last Updated</th>
-                              <th>&nbsp;</th>
-                          </tr>
-                          </thead>
-                          <tbody data-bind="foreach: datasources">
-                          <tr>
-                              <td>
-                                  <span class="text-button datasource-name" data-bind="text: name, pluginEditor: {operation: 'edit', type: 'datasource'}"></span>
-                              </td>
-                              <td data-bind="text: last_updated"></td>
-                              <td>
-                                  <ul class="board-toolbar">
-                                      <li data-bind="click: updateNow"><i class="icon-refresh icon-white"></i></li>
-                                      <li data-bind="pluginEditor: {operation: 'delete', type: 'datasource'}">
-                                          <i class="icon-trash icon-white"></i></li>
-                                  </ul>
-                              </td>
-                          </tr>
-                          </tbody>
-                      </table>
-                  </div>
-                  <span class="text-button table-operation" data-bind="pluginEditor: {operation: 'add', type: 'datasource'}">ADD</span>
-              </div>
-          </div>
-      </div>
-      <div id="column-tools" class="responsive-column-width">
-          <ul class="board-toolbar left-columns">
-              <li class="column-tool add" data-bind="click: addGridColumnLeft"><span class="column-icon right"></span><i class="icon-arrow-left icon-white"></i></li>
-              <li class="column-tool sub" data-bind="click: subGridColumnLeft"><span class="column-icon left"></span><i class="icon-arrow-right icon-white"></i></li>
-          </ul>
-          <ul class="board-toolbar right-columns">
-              <li class="column-tool sub" data-bind="click: subGridColumnRight"><span class="column-icon right"></span><i class="icon-arrow-left icon-white"></i></li>
-              <li class="column-tool add" data-bind="click: addGridColumnRight"><span class="column-icon left"></span><i class="icon-arrow-right icon-white"></i></li>
-          </ul>
-      </div>
-      <div id="toggle-header" data-bind="click: toggleEditing">
-        <i id="toggle-header-icon" class="icon-wrench icon-white"></i>
-      </div>
-  </header>
-
-
-  <div>
-      <ul data-bind="template: { name: 'pane-template', foreach: panes}"></ul>
-  </div>
-
-
-  <div>
-      <!-- Start Nav Structure -->
+    <div>
+        <ul data-bind="template: { name: 'pane-template', foreach: panes}"></ul>
+    </div>
+    <!-- Start Nav Structure -->
+    <div>
       <button class="cn-button" id="cn-button">Menu</button>
       <div class="cn-wrapper" id="cn-wrapper">
           <ul>
               <li><a href="#"><span>-</span></a></li>
               <li><a href="#"><span>-</span></a></li>
-              <li><a href="/bitcoin/price-dashboard-alt.html"><span>ALTS</span></a></li>
-
-              <li><a href="/bitcoin/price-dashboard.html"><span>MAIN</span></a></li>
-
-              <li><a href="#"><span></span></a></li>
+              <li><a href="/dashboards/crypto/paxg"><span>PAXG</span></a></li>
+              <li><a href="/dashboards/crypto/stablecoin"><span>STABLECOIN</span></a></li>
+              <li><a href="/dashboards/crypto/crypto"><span>CRYPTO</span></a></li>
               <li><a href="#"><span></span></a></li>
               <li><a href="#"><span></span></a></li>
            </ul>
       </div>
-      <!-- End of Nav Structure -->
-  </div>
+    </div><!-- End of Nav Structure -->
 
-
-</div> <!-- End Container-->
-
-
-
+  </div> <!-- End Container-->
 
 <script src="js/polyfills.js"></script>
 <script src="js/demo2.js"></script>
-
 
 <script type="text/html" id="pane-template">
     <li data-bind="pane: true">
