--- a/dashboards/crypto/price-dashboard-new.html
+++ b/dashboards/crypto/price-dashboard-new.html
@@ -14,7 +14,7 @@
     <link href="css/freeboard.min.css" rel="stylesheet" />
     <script src="js/freeboard.thirdparty.min.js"></script>
     <script type="text/javascript">
-        head.js("js/freeboard+plugins.min.js",
+        head.js("js/freeboard+plugins.min.js","js/flot_extended.plugin.js"
                 // *** Load more plugins here ***
                 function(){
                     $(function()
