--- a/dashboards/crypto/price-dashboard-new.html
+++ b/dashboards/crypto/price-dashboard-new.html
@@ -13,8 +13,9 @@
 
     <link href="css/freeboard.min.css" rel="stylesheet" />
     <script src="js/freeboard.thirdparty.min.js"></script>
+    <script src="js/flot_extended.plugin.js"></script>
     <script type="text/javascript">
-        head.js("js/freeboard+plugins.min.js","js/flot_extended.plugin.js"
+        head.js("js/freeboard+plugins.min.js",
                 // *** Load more plugins here ***
                 function(){
                     $(function()
