added mcap for pax and busd in monitor bal dashboard

--- a/dashboards/crypto/monitor_balance_01.html
+++ b/dashboards/crypto/monitor_balance_01.html
@@ -133,7 +133,7 @@
     <div>
         <ul data-bind="template: { name: 'pane-template', foreach: panes}"></ul>
     </div>
-    <!-- Start Nav Structure -->
+    <!-- Start Nav Structure
     <div>
       <button class="cn-button" id="cn-button">Menu</button>
       <div class="cn-wrapper" id="cn-wrapper">
@@ -147,7 +147,7 @@
               <li><a href="#"><span></span></a></li>
            </ul>
       </div>
-    </div><!-- End of Nav Structure -->
+    </div> End of Nav Structure -->
 
   </div> <!-- End Container-->
 
